--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -49,8 +49,8 @@ centers as part of Open Science Grid in the U.S. and extending across the
 globe. The theoretical computing and simulation needs are more commonly
 addressed by high-performance computing (HPC) in which thousands to hundred
 thousands of tightly coupled CPUs are working simultaneously on a single
-problem. These resources are provided mostly through the DOE
-leadership-class and production class HPC facilities and the NSF XD program.
+problem. These resources are provided mostly through DOE and NSF
+supercomputing centers.
 
 One issue for those applications that traditionally rely on HTC for their
 data-intensive computing is to what degree they can or should use national
@@ -59,28 +59,29 @@ Work is proceeding to make these HTC applications run on HPC, and to
 interface HPC centers to the HTC workload and data management
 infrastructures. The question of cost effectiveness is being discussed.
 Also, traditional HPC applications are developing more data-intensive
-science needs, which however are currently not a good match to existing and
-next-generation HPC architectures. Computational resources will have to
-address the demands for largely increasing data rates, to address the
-increased needs for data intensive computing tasks like data analytics, for
-comparing large samples of simulations and observational data etc.
+science needs, which, however, are currently not a good match to existing
+and next-generation HPC architectures. Computational resources will have to
+address the demands for greatly increasing data rates, and the increased
+needs for data intensive computing tasks like data analytics, for comparing
+large samples of simulations and observational data, etc.
 
-Another pressing issue facing both HTC and HPC communities is that power
-limitations cause processor speeds to no longer increase exponentially, as
-they were for at least two decades. Instead, new chip architectures provide
-multiple cores. Thus we cannot rely on new hardware to run serial codes
-faster and we must move to parallelizing codes to increase application
-performance. In addition to multi-core chips there are accelerators such as
-graphical processing units (GPUs) and many-core chips such as the Intel
-Xeon Phi. In the past computing resource needs scaled roughly with the rate
-that processor speeds increased, following Moore’s law. In the future this
-requires full use of many-core architectures. Also in the storage area
-scaling of disk capacity and throughput is of significant concern, as
-per-unit capacities no longer increase as rapidly.
+Another pressing issue facing both HTC and HPC communities is that
+processor speeds are no longer increasing exponentially, as they were for
+at least two decades. Instead, new chip architectures provide multiple
+cores. Thus, we cannot rely on new hardware to run serial codes faster, and
+we must parallelize codes to increase application performance. In addition
+to multi-core chips, there are accelerators such as graphical processing
+units (GPUs) and many-core chips such as the Intel Xeon Phi. 
+%% The next line is untrue for LGT -- needs have always outstipped resources. 
+In the past computing resource needs for energy frontier experiments scaled
+roughly with the rate that processor speeds increased, following Moore's
+law. In the future this requires full use of many-core architectures. Also
+in the storage area scaling of disk capacity and throughput is of
+significant concern, as per-unit capacities no longer increase as rapidly.
 
 These changes in chip technology and high performance system architectures
-require to develop parallel algorithms and codes, and to train personnel to
-develop, support and maintain them. Different subgroups are at different
+require us to develop parallel algorithms and codes, and to train personnel
+to develop, support and maintain them. Different subgroups are at different
 stages in their efforts to port to these new technologies. Lattice QCD, for
 example, started its GPU porting efforts in 2008 and has had code in
 production for some time, particularly for quark inversions; however, there
@@ -110,7 +111,7 @@ the forefront of computation.
 
 For the {\it Energy Frontier} experiments computing limitations already
 cause a limit to the amount of physics data that can be analyzed. The
-planned upgrades to the LHC energy and luminosity is expected to result in
+planned upgrades to the LHC energy and luminosity are expected to result in
 a ten-fold increase in the number of events and a ten-fold increase in
 event complexity. Effort has begun to increase code efficiency and
 parallelism in reconstruction software and to explore the potential of
@@ -152,7 +153,7 @@ and to provide near-real-time simulations feedback for accelerator
 operation. It will be necessary to include additional physics in codes and
 to improve algorithms to achieve these goals. Production runs can use from
 10K to 100K cores. Considerable effort is being expended to port to new
-architectures in particular to address the realtime requirements.
+architectures, in particular to address the real-time requirements.
 
 {\it Lattice Field Theory} calculations rely on national supercomputer
 centers and hardware purchased for the USQCD Computing Project. Allocations
@@ -177,7 +178,7 @@ Model rates for the processes they need.
 The {\it Distributed Computing and Facilities Infrastructures} subgroup
 looked at the growth trends in distributed resources as provided by the
 Open Science Grid, and the national high performance computing (HPC)
-centers. Most of the experiment computing is of the HTC type, but HPC
+centers. Most of the computing by experiments is of the HTC type, but HPC
 centers could be used for specific work flows. Using existing computing
 centers could save smaller experiments from large investments in hardware
 and personnel. Distributed HTC has become important in a number of science
@@ -213,59 +214,57 @@ The {\it Storage and Data Management} subgroup found that storage continues
 to be a cost driver for many experiments. It is necessary to manage the
 cost to optimize the science output from the experiment. Tape storage
 continues to be relatively inexpensive and should be more utilized within
-the storage hierarchy. While new disk technology have been arriving every
-18 months, there is now less competition and the technology cycle slowing
+the storage hierarchy. While new disk technology has been arriving every 18
+months, there is now less competition and the technology cycle is slowing
 down. Operating distributed data management systems can be costly for
 experiments, and R\&D in this area could benefit a number of experiments.
 
 To summarize, the challenging resource needs for the planned and proposed
 physics programs require efficient and flexible use of all resources. HEP
-needs both distributed HTC and HPC. Emerging experiment programs might
+needs both distributed HTC and HPC. Emerging experimental programs might
 consider a mix to fulfill demands. Programs to fund these resources need to
 continue. Sharing and opportunistic use help address resource needs, from
 all tiers of computing, eventually including commercial providers. There is
 increasing need for data intensive computing in traditionally
 computation-intensive fields, including at HPC centers, for data analytics,
-combining simulations and observational data etc.
+combining simulations and observational data, etc.
 
-Increasing computational demands require us to stay on Moore’s law curve,
-and the field needs to pro-actively make better use of advanced computing
-architectures. With the need for more parallelization the complexity of
-software and systems continues to increase, impacting architectures for
-application frameworks, workload management systems, and also the physics
-code. There is an important need for developing and maintaining expertise
-across the field, including re-engineering of frameworks, libraries and
+In order to satisfy our increasing computational demands, the field needs
+to make better use of advanced computing architectures. With the need for
+more parallelization, the complexity of software and systems continues to
+increase, impacting architectures for application frameworks, workload
+management systems, and also the physics code. We must develop and maintain
+expertise across the field, and re-engineer frameworks, libraries and
 physics codes. Unless corrective action is taken to enable us to take full
-advantage of the new hardware architectures we could be frozen out of cost
+advantage of the new hardware architectures, we could be frozen out of cost
 effective computing solutions on a time scale of 10 years. There is a large
 code base that needs to be re-engineered, and we currently do not have
 enough people trained to do it.
 
 The continuing huge growth in observational and simulation data drives the
 need for continued R\&D investment in data management, data access methods,
-and networking. Continued effort evolution of the data management and
-storage systems will be needed in order to take advantage of new network
+and networking. Continued evolution of the data management and storage
+systems will be needed in order to take advantage of new network
 capabilities, ensure efficiency and robustness of the global data
 federations, and to contain the level of effort needed for operations.
 Significant challenges with data management and access remain, and we
 expect solutions that will be based on content delivery approaches, dynamic
 data placement, and remote data access.
 
-Networks can be relied on to serve as foundation of data intensive
-distributed computing. Emerging network capabilities and data access
-technologies improve our ability to use resources independent of location,
-over the network. This will enable a large spectrum of provisioning of
-compute resources: dedicated facilities, university computing centers,
-opportunistic use of shared resources between PIs, even scientific
+Network reliability is essential for data intensive distributed computing.
+Emerging network capabilities and data access technologies improve our
+ability to use resources independent of location. This will enable use of
+diverse compute resources: dedicated facilities, university computing
+centers, opportunistic use of shared resources between PIs, even scientific
 communities, commercial clouds, eventually also making leadership-class HPC
 centers relevant for data-intensive computing. The computing models should
-treat networks as resource that needs to be managed and planned for.
+treat networks as a resource that needs to be managed and planned for.
 
 Computing will be essential for progress in theory and experiment over the
-next two decades. The field continues to learn doing more science with less
-resources, requiring us to be more flexible and perhaps tolerate higher
-levels of risk. The advances in computer hardware that we have seen in the
-past may not continue at the same rate in the future. The issues identified
-in this report require continued attention. Addressing them will increase
-efficiency, reduce costs, enable significantly more realistic theoretical
-calculations and will ensure great progress in the experimental programs.
+next two decades. The field continues to learn how to do more science with
+smaller resources, requiring us to be more flexible and perhaps tolerate
+higher levels of risk. The advances in computer hardware that we have seen
+in the past may not continue at the same rate in the future. The issues
+identified in this report require continuing attention. Addressing them
+will increase efficiency, reduce costs, and enable us to meet the
+experimental and theoretical goals identified through the Snowmass process.
