--- a/SnowmassStyle/Computing/I3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I3-executiveSummary.tex
@@ -23,9 +23,9 @@ In support of HEP’s objectives through 2020, basic and applied networking rese
 \item Will power consumption become a limiting economic or operational factor in this time period? 
 \end{itemize}
 
-Recent investments in network research have been too small, and continued underfunding will compromise the ability of HEP collaborations to maximize scientific productivity. Increased research funding, while necessary, is not sufficient; there also needs to be increased attention to the process of translating the results of network research into real-world architectures which NRENs can deploy and manage. Incentives and funding for such ‘translational’ activities are urgently needed. Because network research has now begun to intersect with research in services and applications, cross-disciplinary funding opportunities should also be available.  
+Recent investments in network research have been too small, and continued underfunding will compromise the ability of HEP collaborations to maximize scientific productivity. Increased research funding, while necessary, is not sufficient; there also needs to be increased attention to the process of translating the results of network research into real-world architectures which NRENs can deploy and manage. Incentives and funding for such "translational"’" activities are urgently needed. Because network research has now begun to intersect with research in services and applications, cross-disciplinary funding opportunities should also be available.  
 
-A number of cultural and operational practices need to be overcome in order for NRENs (and global cyber infrastructures more generally) to fully succeed: expectations for network performance must be raised significantly, so that collaborations do not continue to design workflows around a historical impression of what is possible; the gap between peak and average transfer rates must be closed; and campuses must deploy secure science data enclaves – or  Science DMZs\cite{DMZ} – engineered for the needs of HEP and other data-intensive disciplines.  Fortunately, each of these trends is currently underway, but momentum must be accelerated.   
+A number of cultural and operational practices need to be overcome in order for NRENs (and global cyber-infrastructures more generally) to fully succeed: expectations for network performance must be raised significantly, so that collaborations do not continue to design workflows around a historical impression of what is possible; the gap between peak and average transfer rates must be closed; and campuses must deploy secure science data enclaves –-- or  Science DMZs\cite{DMZ} –-- engineered for the needs of HEP and other data-intensive disciplines.  Fortunately, each of these trends is currently underway, but momentum must be accelerated.   
 
-Ten years from now, the key applications on which HEP depends will not be fully successful, efficient, or cost-effective if they are run on the Internet as it exists today. During the next decade, research networks need to evolve into programmable instruments – flexible resources which can customized for particular needs, but which exist within a common, integrated, ubiquitous framework that is reliable, robust and trusted for its privacy and integrity. These are major challenges, but they are tractable if funding agencies invest in innovative research, and maintain support for the exponential growth of NREN traffic. 
+Ten years from now, the key applications on which HEP depends will not be fully successful, efficient, or cost-effective if they are run on the Internet as it exists today. During the next decade, research networks need to evolve into programmable instruments –-- flexible resources which can customized for particular needs, but which exist within a common, integrated, ubiquitous framework that is reliable, robust and trusted for its privacy and integrity. These are major challenges, but they are tractable if funding agencies invest in innovative research, and maintain support for the exponential growth of NREN traffic. 
 
